--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,11 +14,12 @@
         <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity = "sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin = "anonymous">
         <!-- Latest compiled and minified JavaScript -->
         <link href = "//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.2/toastr.min.css" rel = "stylesheet"/>
+        <link href = "//cdn.datatables.net/u/bs/jszip-2.5.0,pdfmake-0.1.18,dt-1.10.12,af-2.1.2,b-1.2.0,b-colvis-1.2.0,b-flash-1.2.0,b-html5-1.2.0,b-print-1.2.0,cr-1.3.2,fc-3.2.2,fh-3.1.2,kt-2.1.2,r-2.1.0,rr-1.1.2,sc-1.4.2,se-1.2.0/datatables.min.css" rel = "stylesheet"/>
         <link rel = 'stylesheet' href = '/stylesheets/style.css'/>
 
     </head>
 
-    <body ng-app = "myApp" ng-controller = "myAppControllers">
+    <body ng-app = "myApp" ng-controller = "myAppControllers" ng-cloak>
         <div class = "container">
             <div class = "row">
                 <div class = "col-md-12">
@@ -30,8 +31,7 @@
                         </button>
 
                         <button id = "clearButton" type = "submit" ng-click = "clear()" class = "btn uppercase mt-ladda-btn ladda-button" style = "background-color: red;color: white" data-style = "expand-right" data-size = "l">
-                            <span class = "ladda-label">
-เคลียร์</span>
+                            <span class = "ladda-label">เคลียร์</span>
                         </button>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                 </div>
                 <div class = "col-md-12" style = "margin-top: 20px" ng-show = "finalResult">
                     <div align = "center">
-                        <table class = "table table-striped" border = "1" style = "font-family: monospace; font-size: 25px">
+                        <table datatable = "ng" border = "1" style = "font-family: monospace; font-size: 25px" class = "datable-vertical-align table table-striped table-bordered table-hover order-column" dt-options = "dtOptions" width = "100%">
                             <thead>
                                 <tr>
                                     <th class = "success" style = "text-align: center">ผิด</th>
@@ -77,11 +77,15 @@
     <script src = "//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.2/toastr.min.js"></script>
     <script src = "//cdnjs.cloudflare.com/ajax/libs/Ladda/1.0.0/spin.min.js"></script>
     <script src = "//cdnjs.cloudflare.com/ajax/libs/Ladda/1.0.0/ladda.min.js"></script>
+    <script src = "//cdn.datatables.net/u/bs/jszip-2.5.0,pdfmake-0.1.18,dt-1.10.12,af-2.1.2,b-1.2.0,b-colvis-1.2.0,b-flash-1.2.0,b-html5-1.2.0,b-print-1.2.0,cr-1.3.2,fc-3.2.2,fh-3.1.2,kt-2.1.2,r-2.1.0,rr-1.1.2,sc-1.4.2,se-1.2.0/datatables.min.js" type = "text/javascript"></script>
+    <script src = "//cdnjs.cloudflare.com/ajax/libs/angular-datatables/0.5.4/angular-datatables.min.js"></script>
+    <script src = "//cdnjs.cloudflare.com/ajax/libs/angular-datatables/0.5.4/plugins/buttons/angular-datatables.buttons.min.js"></script>
+
     <script>
-        angular.module('myApp', ['myAppControllers']);
+        angular.module('myApp', ['myAppControllers', 'datatables', 'datatables.buttons']);
         var myAppControllers = angular.module('myAppControllers', []);
 
-        myAppControllers.controller('myAppControllers', ['$scope', '$http', '$filter', '$window', function ($scope, $http, $filter, $window) {
+        myAppControllers.controller('myAppControllers', ['$scope', '$http', '$filter', '$window', 'DTOptionsBuilder', function ($scope, $http, $filter, $window, DTOptionsBuilder) {
             toastr.options = {
                 "closeButton": true,
                 "debug": false,
@@ -96,7 +100,13 @@
                 "showMethod": "fadeIn",
                 "hideMethod": "fadeOut"
             };
-
+            var languageSource = '//cdn.datatables.net/plug-ins/1.10.9/i18n/Thai.json';
+            $scope.dtOptions = DTOptionsBuilder.newOptions()
+                    .withOption('paging', false)
+                    .withLanguageSource(languageSource)
+                    .withButtons([
+                        'print'
+                    ]);
             var submitButton = document.querySelector('#submitButton') ? Ladda.create(document.querySelector('#submitButton')) : null;
 
             $scope.formData = {};
@@ -110,7 +120,7 @@
                     $scope.finalResult = [];
                     $scope.finalResult = object.finalResult;
                     $scope.finalInput = object.finalInput;
-                    toastr.success("สำเร็จ", "Success")
+                    toastr.success("สำเร็จ", "Success");
                     submitButton.stop();
                 });
             };
@@ -118,7 +128,7 @@
                 $scope.formData = {};
                 $scope.finalInput = [];
                 $scope.finalResult = [];
-                toastr.success("เคลียร์สำเร็จ", "Success")
+                toastr.success("เคลียร์สำเร็จ", "Success");
             }
             $scope.format = function (value) {
                 var string1 = ''; //abc
