--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,17 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
 
 [ng\:cloak], [ng-cloak], .ng-cloak {
-  display: none;
+    display: none;
+}
+
+.bigTable {
+    font-family: monospace;
+    font-size: 25px
 }
